Fix overflow-x

--- a/src/style.css
+++ b/src/style.css
@@ -581,6 +581,7 @@ body::-webkit-scrollbar {
 .slider {
     position: absolute;
     z-index: 10000;
+    overflow-x: hidden;
 }
 
 .section {
